--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -2,14 +2,14 @@
   "background.error.title.common": "Ошибка",
   "background.error.title.token-expired": "Истек срок действия токена безопасности документа",
   "background.error.subtitle.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение.",
-  "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, переустановите приложение.",
+  "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, авторизуйте приложение повторно.",
   "background.error.subtitle.docspace-authorization": "Неудалось получить авторизацию для ONLYOFFICE DocSpace. Пожалуйста, перейдите в раздел Настройка Авторизации, чтобы настроить параметры приложения ONLYOFFICE DocSpace.",
   "background.error.subtitle.docspace-connection": "Вы не подключены к порталу ONLYOFFICE DocSpace.",
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите в Настройки Соединения, чтобы настроить параметры приложения ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Пожалуйста, свяжитесь с администратором.",
   "button.login": "Авторизоваться",
   "button.logout": "Выйти",
-  "button.reinstall": "Переустановить",
+  "button.reauthorize": "Авторизовать повторно",
   "button.save": "Сохранить",
   "button.settings": "Настройки",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
