--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -2,14 +2,14 @@
   "background.error.title.common": "Error",
   "background.error.title.token-expired": "The document security token has expired",
   "background.error.subtitle.common": "Something went wrong. Please reload the app.",
-  "background.error.subtitle.token-expired": "Something went wrong. Please reinstall the app.",
+  "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
   "background.error.subtitle.docspace-authorization": "Can not get authorize in ONLYOFFICE DocSpace. Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace portal.",
   "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.login": "Login",
   "button.logout": "Logout",
-  "button.reinstall": "Reinstall",
+  "button.reauthorize": "Re-authorize",
   "button.save": "Save",
   "button.settings": "Settings",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
