refactor(frontend):  Authorization added system user

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -18,10 +18,12 @@
   "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
+  "settings.authorization.inputs.system": "System User",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
   "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
+  "settings.authorization.status.system": "Current user is System Admin",
   "settings.connection.menu-item": "Connection",
   "settings.connection.title": "Configure ONLYOFFICE DocSpace app settings",
   "settings.connection.description": "This plugin allows multiple users to collaborate in real time, save back those changes to Pipedrive and enables the users to edit office documents from Pipedrive using ONLYOFFICE DocSpace Server.",
