--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -19,7 +19,7 @@
   "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
-  "settings.authorization.inputs.system": "System User",
+  "settings.authorization.inputs.system": "System User (DocSpace administrator role required)",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
