refactor(frontend): translations

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -6,9 +6,9 @@
   "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
   "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
   "background.error.subtitle.docspace-authorization": "Can not get authorize in ONLYOFFICE DocSpace. Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings.",
-  "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace portal.",
+  "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace.",
   "background.error.subtitle.plugin.not-active": "ONLYOFFICE DocSpace App is not yet available. Please wait until a Pipedrive Administrator configures the app settings.",
-  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
+  "background.error.hint.admin.docspace-connection": "Please go to the Connection tab to configure the DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.login": "Login",
   "button.logout": "Logout",
