--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -1,11 +1,14 @@
 {
   "background.error.title.common": "Error",
+  "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
   "background.error.title.token-expired": "The document security token has expired",
   "background.error.subtitle.common": "Something went wrong. Please reload the app.",
+  "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
   "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
   "background.error.subtitle.docspace-authorization": "Can not get authorize in ONLYOFFICE DocSpace. Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings.",
-  "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace portal.",
-  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
+  "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace.",
+  "background.error.subtitle.plugin.not-active": "ONLYOFFICE DocSpace App is not yet available. Please wait until a Pipedrive Administrator configures the app settings.",
+  "background.error.hint.admin.docspace-connection": "Please go to the Connection tab to configure the DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.login": "Login",
   "button.logout": "Logout",
@@ -18,10 +21,12 @@
   "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
+  "settings.authorization.inputs.system": "System User (DocSpace administrator role required)",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
   "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
+  "settings.authorization.status.system": "Current user is System Admin",
   "settings.connection.menu-item": "Connection",
   "settings.connection.title": "Configure ONLYOFFICE DocSpace app settings",
   "settings.connection.description": "This plugin allows multiple users to collaborate in real time, save back those changes to Pipedrive and enables the users to edit office documents from Pipedrive using ONLYOFFICE DocSpace Server.",
