feat(frontend): csp hint on Connection page

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -36,6 +36,11 @@
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
   "settings.connection.saving.error": "Could not save ONLYOFFICE DocSpace settings",
   "settings.connection.saving.error.forbidden": "The specified user is not a ONLYOFFICE DocSpace administrator",
+  "settings.connection.hint.csp.title": "Check the CSP settings",
+  "settings.connection.hint.csp.message": "Before connecting the app, please go to the {{path}} and add the following credentials to the allow list",
+  "settings.connection.hint.csp.path": "DocSpace Settings - Developer tools - JavaScript SDK",
+  "settings.connection.hint.csp.pipedrive-adress": "Pipedrive portal address",
+  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace app",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
