feat(frontend): refactoring Connection.tsx translations

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -28,9 +28,8 @@
   "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
   "settings.authorization.status.system": "Current user is System Admin",
   "settings.connection.menu-item": "Connection",
-  "settings.connection.title": "Configure ONLYOFFICE DocSpace app settings",
-  "settings.connection.description": "This plugin allows multiple users to collaborate in real time, save back those changes to Pipedrive and enables the users to edit office documents from Pipedrive using ONLYOFFICE DocSpace Server.",
-  "settings.connection.inputs.address": "DocSpace Service Address",
+  "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
+  "settings.connection.inputs.address": "ONLYOFFICE DocSpace address",
   "settings.connection.inputs.login": "DocSpace Login",
   "settings.connection.inputs.password": "DocSpace Password",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
