feat(frontend): Connection disconnect button

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -14,6 +14,8 @@
   "button.logout": "Logout",
   "button.reauthorize": "Re-authorize",
   "button.save": "Save",
+  "button.connect": "Connect",
+  "button.disconnect": "Disconnect",
   "button.settings": "Settings",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
@@ -40,6 +42,9 @@
   "settings.connection.hint.csp.path": "DocSpace Settings - Developer tools - JavaScript SDK",
   "settings.connection.hint.csp.pipedrive-adress": "Pipedrive portal address",
   "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace app",
+  "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfuly disconnected",
+  "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
