--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -14,6 +14,8 @@
   "button.logout": "Logout",
   "button.reauthorize": "Re-authorize",
   "button.save": "Save",
+  "button.change": "Change",
+  "button.cancel": "Cancel",
   "button.connect": "Connect",
   "button.disconnect": "Disconnect",
   "button.settings": "Settings",
