feat(frontend): tooltip for system user

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -28,6 +28,7 @@
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.inputs.system": "Use this account with System user (DocSpace Admin role required)",
+  "settings.authorization.inputs.system.help": "If you click on this switch, the plugin will perform actions from your DocSpace account",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
