feat(frontend): refactor translations

--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -1,47 +1,63 @@
 {
   "background.error.title.common": "Error",
-  "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
   "background.error.title.token-expired": "The document security token has expired",
+  "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
   "background.error.subtitle.common": "Something went wrong. Please reload the app.",
-  "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
   "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
-  "background.error.subtitle.docspace-authorization": "Can not get authorize in ONLYOFFICE DocSpace. Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings.",
+  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App is not yet available",
+  "background.error.subtitle.plugin.not-active.help": "Please wait until a Pipedrive Administrator configures the app settings",
   "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace",
-  "background.error.subtitle.plugin.not-active": "ONLYOFFICE DocSpace App is not yet available. Please wait until a Pipedrive Administrator configures the app settings.",
-  "background.error.hint.admin.docspace-connection": "Please go to the Connection tab to configure the DocSpace app settings.",
+  "background.error.subtitle.docspace-authorization.message": "Can not get authorize in ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-authorization.help": "Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
+  "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
+  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
+  "button.reauthorize": "Re-authorize",
+  "button.settings": "Settings",
+  "button.create.room": "Create room",
   "button.login": "Login",
   "button.logout": "Log out",
-  "button.reauthorize": "Re-authorize",
+  "button.disconnect": "Disconnect",
+  "button.connect": "Connect",
+  "button.change": "Change",
+  "button.cancel": "Cancel",
   "button.save": "Save",
-  "button.settings": "Settings",
-  "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
-  "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
-  "settings.authorization.menu-item": "Authorization",
-  "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
-  "settings.authorization.inputs.email": "Email",
-  "settings.authorization.inputs.password": "Password",
-  "settings.authorization.inputs.system": "System User (DocSpace administrator role required)",
-  "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
-  "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
-  "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
-  "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
-  "settings.authorization.status.system": "Current user is System Admin",
-  "settings.connection.menu-item": "Connection",
-  "settings.connection.title": "Configure ONLYOFFICE DocSpace app settings",
-  "settings.connection.description": "This plugin allows multiple users to collaborate in real time, save back those changes to Pipedrive and enables the users to edit office documents from Pipedrive using ONLYOFFICE DocSpace Server.",
-  "settings.connection.inputs.address": "DocSpace Service Address",
-  "settings.connection.inputs.login": "DocSpace Login",
-  "settings.connection.inputs.password": "DocSpace Password",
-  "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
-  "settings.connection.saving.error": "Could not save ONLYOFFICE DocSpace settings",
-  "settings.connection.saving.error.forbidden": "The specified user is not a ONLYOFFICE DocSpace administrator",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
   "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
   "docspace.link.developer-tools": "Developer Tools section",
+  "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
+  "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
+  "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
   "notification.system-user.not-found": "System User is not set.",
+  "notification.plugin.set-system-user": "Please go to Settings and set yourself as a System User.",
   "notification.plugin.functionality-is-limited": "Plugin functionality is limited.",
-  "notification.plugin.set-system-user": "Please go to Settings and set yourself as a System User."
+  "settings.authorization.login.system.confirm": "Do you agree to connect your DocSpace account? The app will use it to perform actions.",
+  "settings.authorization.deleting.system.confirm": "Are you sure you want to log out? You are a System User and this action will result in the ONLYOFFICE DocSpace functionality being limited.",
+  "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
+  "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
+  "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
+  "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
+  "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
+  "settings.authorization.status.system": "Current user is <semibold>System Admin</semibold>",
+  "settings.authorization.inputs.email": "Email",
+  "settings.authorization.inputs.password": "Password",
+  "settings.authorization.inputs.system.title": "Use this account with System user (DocSpace Admin role required)",
+  "settings.authorization.inputs.system.help": "If you click on this switch, the plugin will perform actions from your DocSpace account",
+  "settings.authorization.menu-item": "Authorization",
+  "settings.connection.saving.error.forbidden": "The specified user is not a ONLYOFFICE DocSpace administrator",
+  "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
+  "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
+  "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfuly disconnected",
+  "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
+  "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
+  "settings.connection.hint.csp.title": "Check the CSP settings",
+  "settings.connection.hint.csp.message": "Before connecting the app, please go to the <semibold>{{path}}</semibold> and add the following credentials to the allow list",
+  "settings.connection.hint.csp.path": "DocSpace Settings - Developer tools - JavaScript SDK",
+  "settings.connection.hint.csp.pipedrive-adress": "Pipedrive portal address",
+  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace app",
+  "settings.connection.inputs.address": "ONLYOFFICE DocSpace address",
+  "settings.connection.menu-item": "Connection"
 }
