--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -8,9 +8,9 @@
   "background.error.subtitle.plugin.not-active.help": "Please wait until a Pipedrive Administrator configures the app settings",
   "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.message": "Can not get authorize in ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
+  "background.error.subtitle.docspace-authorization.help": "Please go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
   "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
-  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
+  "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.reauthorize": "Re-authorize",
   "button.settings": "Settings",
@@ -50,7 +50,7 @@
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
   "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
-  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfuly disconnected",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfully disconnected",
   "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
   "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
   "settings.connection.hint.csp.title": "Check the CSP settings",
