--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -1,63 +1,63 @@
 {
-  "background.error.title.common": "Error",
-  "background.error.title.token-expired": "The document security token has expired",
-  "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
-  "background.error.subtitle.common": "Something went wrong. Please reload the app.",
-  "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
-  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App is not yet available",
-  "background.error.subtitle.plugin.not-active.help": "Please wait until a Pipedrive Administrator configures the app settings",
-  "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.message": "Can not get authorize in ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
-  "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
-  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
-  "background.error.hint.docspace-connection": "Please contact the administrator.",
-  "button.reauthorize": "Re-authorize",
-  "button.settings": "Settings",
-  "button.create.room": "Create room",
-  "button.login": "Login",
-  "button.logout": "Log out",
-  "button.disconnect": "Disconnect",
-  "button.connect": "Connect",
-  "button.change": "Change",
-  "button.cancel": "Cancel",
-  "button.save": "Save",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
-  "docspace.error.login": "User authentication failed",
-  "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
-  "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
-  "docspace.link.developer-tools": "Developer Tools section",
-  "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
-  "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
-  "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
-  "notification.system-user.not-found": "System User is not set.",
-  "notification.plugin.set-system-user": "Please go to Settings and set yourself as a System User.",
-  "notification.plugin.functionality-is-limited": "Plugin functionality is limited.",
-  "settings.authorization.login.system.confirm": "Do you agree to connect your DocSpace account? The app will use it to perform actions.",
-  "settings.authorization.deleting.system.confirm": "Are you sure you want to log out? You are a System User and this action will result in the ONLYOFFICE DocSpace functionality being limited.",
-  "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
-  "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
-  "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
-  "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
-  "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
-  "settings.authorization.status.system": "Current user is <semibold>System Admin</semibold>",
-  "settings.authorization.inputs.email": "Email",
-  "settings.authorization.inputs.password": "Password",
-  "settings.authorization.inputs.system.title": "Use this account with System user (DocSpace Admin role required)",
-  "settings.authorization.inputs.system.help": "If you click on this switch, the plugin will perform actions from your DocSpace account",
-  "settings.authorization.menu-item": "Authorization",
-  "settings.connection.saving.error.forbidden": "The specified user is not a ONLYOFFICE DocSpace administrator",
-  "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
-  "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
-  "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
-  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfuly disconnected",
-  "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
-  "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
-  "settings.connection.hint.csp.title": "Check the CSP settings",
-  "settings.connection.hint.csp.message": "Before connecting the app, please go to the <semibold>{{path}}</semibold> and add the following credentials to the allow list",
-  "settings.connection.hint.csp.path": "DocSpace Settings - Developer tools - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Pipedrive portal address",
-  "settings.connection.hint.csp.docspace-adress": "ONLYOFFICE DocSpace app",
-  "settings.connection.inputs.address": "ONLYOFFICE DocSpace address",
-  "settings.connection.menu-item": "Connection"
+  "background.error.title.common": "Ошибка",
+  "background.error.title.token-expired": "Срок действия токена безопасности документа истек",
+  "background.error.title.create-room": "К сожалению, у вас нет разрешения на создание комнат",
+  "background.error.subtitle.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
+  "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, авторизуйте приложение повторно",
+  "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
+  "background.error.subtitle.plugin.not-active.help": "Пожалуйста, подождите, когда администратор Pipedrive настроит приложение",
+  "background.error.subtitle.docspace-connection": "Вы не подключены к ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-authorization.message": "Не удается авторизоваться в ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-authorization.help": "Пожалуйста, перейдите к настройкам авторизации, чтобы настроить приложение",
+  "background.error.subtitle.create-room": "Пожалуйста, попросите администратора Pipedrive создать комнату или свяжитесь с администратором DocSpace для обновления вашей роли.",
+  "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
+  "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
+  "button.reauthorize": "Авторизуйтесь повторно",
+  "button.settings": "Настройки",
+  "button.create.room": "Создать комнату",
+  "button.login": "Войти",
+  "button.logout": "Выйти",
+  "button.disconnect": "Отключиться",
+  "button.connect": "Подключиться",
+  "button.change": "Изменить",
+  "button.cancel": "Отменить",
+  "button.save": "Сохранить",
+  "docspace.error.unreached": "Не удается войти в ONLYOFFICE DocSpace",
+  "docspace.error.login": "Не удалось идентифицировать пользователя",
+  "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
+  "docspace.error.csp": "Текущий домен не установлен в настройках Политики безопасности контента (CSP). Пожалуйста, добавьте его через раздел Инструменты разработчика.",
+  "docspace.link.developer-tools": "Раздел Инструменты разработчика",
+  "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
+  "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
+  "room.create.description": "Создайте комнату ONLYOFFICE DocSpace, чтобы эффективно работать совместно над данной сделкой",
+  "notification.system-user.not-found": "Пользователь системы не установлен.",
+  "notification.plugin.set-system-user": "Пожалуйста, перейдите в Настройки и назначьте себя пользователем системы.",
+  "notification.plugin.functionality-is-limited": "Функциональные возможности плагина ограничены.",
+  "settings.authorization.login.system.confirm": "Вы согласны подключить вашу учетную запись DocSpace? Приложение будет использовать ее, чтобы выполнять действия",
+  "settings.authorization.deleting.system.confirm": "Вы уверены, что хотите выйти? Вы являетесь пользователем системы, и это действие ограничит функциональные возможности ONLYOFFICE DocSpace.",
+  "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
+  "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
+  "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
+  "settings.authorization.title": "Войти в учетную запись ONLYOFFICE DocSpace",
+  "settings.authorization.status.authorized": "Вы успешно вошли в свою учетную запись ONLYOFFICE DocSpace",
+  "settings.authorization.status.system": "Текущий пользователь является <semibold>администратором системы</semibold>",
+  "settings.authorization.inputs.email": "Электронная почта",
+  "settings.authorization.inputs.password": "Пароль",
+  "settings.authorization.inputs.system.title": "Используйте данную учетную запись в качестве пользователя системы (роль администратора DocSpace не требуется)",
+  "settings.authorization.inputs.system.help": "Если вы нажмете на этот переключатель, плагин будет выполнять действия из вашей учетной записи DocSpace",
+  "settings.authorization.menu-item": "Авторизация",
+  "settings.connection.saving.error.forbidden": "Указанный пользователь не является администратором ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
+  "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
+  "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
+  "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
+  "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
+  "settings.connection.hint.csp.title": "Проверить настройки Политики безопасности контента (CSP)",
+  "settings.connection.hint.csp.message": "Перед подключением приложения, пожалуйста, перейдите к <semibold>{{path}}</semibold> и добавьте следующие реквизиты пользователя в список разрешений",
+  "settings.connection.hint.csp.path": "Настройки DocSpace – Инструменты разработчика - JavaScript SDK",
+  "settings.connection.hint.csp.pipedrive-adress": "Адрес портала Pipedrive",
+  "settings.connection.hint.csp.docspace-adress": "Приложение ONLYOFFICE DocSpace",
+  "settings.connection.inputs.address": "Адрес ONLYOFFICE DocSpace",
+  "settings.connection.menu-item": "Соединение"
 }
