redactor(frontend): translations

--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -8,9 +8,9 @@
   "background.error.subtitle.plugin.not-active.help": "Please wait until a Pipedrive Administrator configures the app settings",
   "background.error.subtitle.docspace-connection": "You are not connected to ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.message": "Can not get authorize in ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Please, go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
+  "background.error.subtitle.docspace-authorization.help": "Please go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
   "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
-  "background.error.hint.admin.docspace-connection": "Please, go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
+  "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.reauthorize": "Re-authorize",
   "button.settings": "Settings",
